src/objects/loan__Client__c.object
<CustomObject>
    <description>Borrower</description>
    <fields>
        <fullName>loan__Additional_Field__c</fullName>
        <label>Additional Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Address_1__c</fullName>
        <label>Address 1</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Address_2__c</fullName>
        <label>Address 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Address_3__c</fullName>
        <label>Address 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Approval_Date__c</fullName>
        <inlineHelpText>The date on which loan is approved.</inlineHelpText>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Business_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Activity</label>
        <referenceTo>loan__Business_Activity__c</referenceTo>
        <relationshipLabel>Clients</relationshipLabel>
        <relationshipName>Clients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Center</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>loan__Center__c.loan__Branch__r.Name</field>
                <operation>equals</operation>
                <valueField>$User.loan__Current_Branch__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__Center__c</referenceTo>
        <relationshipLabel>Clients</relationshipLabel>
        <relationshipName>Clients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Check_for_Duplicates__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Check for Duplicates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Citizenship__c</fullName>
        <label>Citizenship</label>
        <picklist>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__City__c</fullName>
        <label>City</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__ClientCnt__c</fullName>
        <defaultValue>1</defaultValue>
        <label>ClientCnt</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Client_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Client External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Client_Start_Date__c</fullName>
        <description>This is the point at which client is first Approved.</description>
        <label>Client Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Client_Training__c</fullName>
        <label>Client Training</label>
        <summaryForeignKey>loan__Client_Training__c.loan__Client_ID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>loan__Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>INDIA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Current_Loan_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Loan Officer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>loan__Staff__c.loan__Branch__c</field>
                <operation>equals</operation>
                <valueField>$Source.loan__Office__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__Staff__c</referenceTo>
        <relationshipLabel>Clients (Current Loan Officer)</relationshipLabel>
        <relationshipName>Clients1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Date_of_Birth__c</fullName>
        <description>Date of Birth</description>
        <label>Date of Birth</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Education_level__c</fullName>
        <label>Education level</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10th</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12th</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Employment_Business_Details_Count__c</fullName>
        <label>Employment/Business Details Count</label>
        <summaryForeignKey>loan__Employment_Business_Detail__c.loan__Client__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>loan__Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <picklist>
            <picklistValues>
                <fullName>Indian</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Family_Details_Rec_Count__c</fullName>
        <label>Family Details Rec Count</label>
        <summaryForeignKey>loan__Family_Details__c.loan__Client__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>loan__Family_Employment_Details_Count__c</fullName>
        <label>Family Employment Details Count</label>
        <summaryForeignKey>loan__Family_Employment_Details__c.loan__Client__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>loan__Fee_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Fee Set for Client Registration</description>
        <inlineHelpText>Fee Set for Client registration</inlineHelpText>
        <label>Fee Set</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Selected Fee Set&apos;s category must be of type &apos;Client&apos; and it should include at least one fee.</errorMessage>
            <filterItems>
                <field>loan__Fee_Set__c.loan__Fee_Set_Category__c</field>
                <operation>equals</operation>
                <value>Client</value>
            </filterItems>
            <filterItems>
                <field>loan__Fee_Set__c.loan__Number_of_Fees__c</field>
                <operation>notEqual</operation>
                <value>0</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__Fee_Set__c</referenceTo>
        <relationshipLabel>Clients</relationshipLabel>
        <relationshipName>Clients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Fees_Collected__c</fullName>
        <description>Fees Collected</description>
        <inlineHelpText>Fees Collected</inlineHelpText>
        <label>Fees Collected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Financial_Education__c</fullName>
        <label>Financial Education</label>
        <summaryForeignKey>loan__Financial_Education__c.loan__Client__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>loan__First_Name__c</fullName>
        <description>Given Name</description>
        <label>First Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Government_ID__c</fullName>
        <description>Government ID or National ID</description>
        <label>Government ID #</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>loan__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Group</description>
        <inlineHelpText>Group</inlineHelpText>
        <label>Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>loan__Group__c.loan__Office__r.Name</field>
                <operation>equals</operation>
                <valueField>$User.loan__Current_Branch__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__Group__c</referenceTo>
        <relationshipLabel>Clients</relationshipLabel>
        <relationshipName>Clients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Handicapped__c</fullName>
        <label>Handicapped</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Home_Evaluation_Count__c</fullName>
        <label>Home Evaluation Count</label>
        <summaryForeignKey>loan__Home_Evaluation__c.loan__Client__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>loan__Id_Count__c</fullName>
        <description>This variable store the total count of identification detail records for particular client.</description>
        <label>Identification Details Count</label>
        <summaryForeignKey>loan__Client_Identification__c.loan__Client__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>loan__Last_Name__c</fullName>
        <description>Family Name</description>
        <label>Last Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Clients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Marital_Status__c</fullName>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Widowed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divorced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abandoned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Middle_Name__c</fullName>
        <description>Middle Name</description>
        <label>Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__New_Field__c</fullName>
        <label>New Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Nominee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nominee</label>
        <referenceTo>loan__Client__c</referenceTo>
        <relationshipLabel>Clients (Nominee)</relationshipLabel>
        <relationshipName>Clients2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>loan__Number_of_children__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of children</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>loan__Office_Name__c</referenceTo>
        <relationshipLabel>Clients</relationshipLabel>
        <relationshipName>Clients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Religion__c</fullName>
        <label>Religion</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Sales_Income_Estimate_Count__c</fullName>
        <label>Sales Income Estimate Count</label>
        <summaryForeignKey>loan__Sales_Income_Estimate__c.loan__Client__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>loan__Salutation__c</fullName>
        <label>Salutation</label>
        <picklist>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Source_Loan_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Loan Officer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>loan__Staff__c.loan__Branch__c</field>
                <operation>equals</operation>
                <valueField>$Source.loan__Office__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__Staff__c</referenceTo>
        <relationshipLabel>Clients</relationshipLabel>
        <relationshipName>Clients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Spouse_Father_s_First_Name__c</fullName>
        <description>Spouse&apos;s or Father&apos;s Given Name</description>
        <label>Spouse/Father &apos;s First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Spouse_Father_s_Last_Name__c</fullName>
        <description>Spouse&apos;s or Father&apos;s Family Name</description>
        <label>Spouse/Father&apos;s Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Spouse_Father_s_Middle_Name__c</fullName>
        <description>Spouse&apos;s or Father&apos;s Middle Name</description>
        <label>Spouse/Father&apos;s Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Spouse_or_Father__c</fullName>
        <label>Spouse or Father?</label>
        <picklist>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Andaman and Nicobar Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andhra Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arunachal Prades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bihar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chandigarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chhattisgarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dadra and Nagar Haveli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daman and Diu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gujarat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haryana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Himachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jammu and Kashmir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jharkhand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karnataka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lakshadweep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madhya Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maharashtra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manipurß</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meghalaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mizoram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nagaland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orissa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Puducherry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punjab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rajasthan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sikkim</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Application</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Telephone_No__c</fullName>
        <label>Telephone No.</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Total_Fees_Charged__c</fullName>
        <label>Total Fees Charged</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Trained__c</fullName>
        <description>Indicates whether a client has been trained</description>
        <label>Trained On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Vicinity__c</fullName>
        <label>Vicinity</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Zipcode__c</fullName>
        <label>Zipcode</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Zone__c</fullName>
        <label>Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__isBioScanRegistered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this is auto-checked when biometric scan is registered for user</description>
        <label>isBioScanRegistered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__isMember__c</fullName>
        <formula>IF( loan__Client_Training__c  &gt; 0  , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isMember</label>
        <type>Text</type>
    </fields>
    <label>Client</label>
    <nameField>
        <displayFormat>C-{00000000}</displayFormat>
        <label>Client ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>loan__Address1_Special_char_check</fullName>
        <active>false</active>
        <description>Address1 Special_char_check</description>
        <errorConditionFormula>NOT(REGEX( loan__Address_1__c , &quot;^[a-zA-Z0-9-&amp;/#\\s]*$&quot;))</errorConditionFormula>
        <errorDisplayField>loan__Address_1__c</errorDisplayField>
        <errorMessage>Address should not include special characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Address2_Special_char_check</fullName>
        <active>false</active>
        <description>Address Special_char_check</description>
        <errorConditionFormula>NOT(REGEX( loan__Address_2__c , &quot;^[a-zA-Z0-9-&amp;/#\\s]*$&quot;))</errorConditionFormula>
        <errorDisplayField>loan__Address_2__c</errorDisplayField>
        <errorMessage>Address should not include special characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Address3_Special_char_check</fullName>
        <active>false</active>
        <description>Address Special_char_check</description>
        <errorConditionFormula>NOT(REGEX( loan__Address_3__c , &quot;^[a-zA-Z0-9-&amp;/#\\s]*$&quot;))</errorConditionFormula>
        <errorDisplayField>loan__Address_3__c</errorDisplayField>
        <errorMessage>Address should not include special characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Age_Between_18_and_60</fullName>
        <active>true</active>
        <errorConditionFormula>OR
      ((IF(
             MONTH(TODAY())&gt;MONTH( loan__Date_of_Birth__c ),
             YEAR(TODAY())-YEAR(loan__Date_of_Birth__c ),
             IF(AND(MONTH(TODAY()) = MONTH(loan__Date_of_Birth__c ), DAY(TODAY()) &gt;=      
             DAY(loan__Date_of_Birth__c )),YEAR(TODAY())-YEAR(loan__Date_of_Birth__c),
             (YEAR(TODAY())-YEAR(loan__Date_of_Birth__c ))-1)
             )
             &lt;  18) ,
       (IF(
            MONTH(TODAY())&gt;MONTH( loan__Date_of_Birth__c ),
            YEAR(TODAY())-YEAR(loan__Date_of_Birth__c ),
            IF(AND(MONTH(TODAY()) = MONTH(loan__Date_of_Birth__c ), DAY(TODAY()) &gt;= 
            DAY(loan__Date_of_Birth__c )),YEAR(TODAY())-YEAR(loan__Date_of_Birth__c),
           (YEAR(TODAY())-YEAR(loan__Date_of_Birth__c ))-1)
           )
           &gt;   60))</errorConditionFormula>
        <errorDisplayField>loan__Date_of_Birth__c</errorDisplayField>
        <errorMessage>Age should be between18 to 60 years</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Center_Check</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(loan__Center__c)) &amp;&amp; NOT(ISBLANK( loan__Group__c )) &amp;&amp; ( loan__Group__r.loan__Center__c !=  loan__Center__c || ISBLANK(loan__Group__r.loan__Center__c))</errorConditionFormula>
        <errorMessage>User entered Center does not match Center for Group</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Check_Max_Number_of_Persons</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( ISBLANK( loan__Group__c ) ) &amp;&amp;  (loan__Group__r.loan__Maximum_number_of_persons__c  =  loan__Group__r.loan__Number_of_Active_Clients__c )</errorConditionFormula>
        <errorMessage>You cannot add more clients to this group. The allowable number of clients has already been reached.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__City_Special_char_check</fullName>
        <active>false</active>
        <description>City_Special_char_check</description>
        <errorConditionFormula>NOT(REGEX( loan__Address_3__c , &quot;^[a-zA-Z\\s]*$&quot;))</errorConditionFormula>
        <errorDisplayField>loan__City__c</errorDisplayField>
        <errorMessage>City should not include special characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__ClientStartDate</fullName>
        <active>false</active>
        <description>This will not work here. Will only work in a trigger. Because otherwise you can never make any changes to a client! E.g. add a fee set. So deactivating for now.</description>
        <errorConditionFormula>loan__Client_Start_Date__c  &lt;    TODAY()</errorConditionFormula>
        <errorMessage>The client&apos;s start date cannot be before today.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__EitherCenterOrGroupCheck</fullName>
        <active>false</active>
        <description>The client&apos;s Loan Officer and the Group&apos;s/Center&apos;s Loan Officer must be the same.</description>
        <errorConditionFormula>((loan__Group__c &lt;&gt; null) &amp;&amp; ( loan__Loan_Officer__r.Id   &lt;&gt; loan__Group__r.loan__Assigned_LO__r.Id))  || (( loan__Center__c  &lt;&gt; null) &amp;&amp; ( loan__Loan_Officer__r.Id   &lt;&gt;  loan__Center__r.loan__Loan_Officer__r.Id ))</errorConditionFormula>
        <errorMessage>The client&apos;s Loan Officer and the Group&apos;s/Center&apos;s Loan Officer must be the same.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__FirstName_Special_char_check</fullName>
        <active>true</active>
        <description>FirstName_Special_char_check</description>
        <errorConditionFormula>NOT(REGEX(  loan__First_Name__c  , &quot;^[a-zA-Z]*$&quot;))</errorConditionFormula>
        <errorDisplayField>loan__First_Name__c</errorDisplayField>
        <errorMessage>First Name should not include special characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__GovernmentID_Special_char_check</fullName>
        <active>true</active>
        <description>GovernmentID_Special_char_check</description>
        <errorConditionFormula>NOT(REGEX(  loan__Government_ID__c  , &quot;^[a-zA-Z0-9-\\s]*$&quot;))</errorConditionFormula>
        <errorDisplayField>loan__Government_ID__c</errorDisplayField>
        <errorMessage>GovernmentID should not include special characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Group_Staus_check</fullName>
        <active>true</active>
        <description>Group_Staus_check</description>
        <errorConditionFormula>NOT(ISBLANK(loan__Group__c) || ISNULL(loan__Group__c))
&amp;&amp; NOT( ISPICKVAL( loan__Group__r.loan__Group_Status__c , &apos;Approved&apos;) )</errorConditionFormula>
        <errorMessage>The Group is not yet  Approved</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__LastName_Special_char_check</fullName>
        <active>true</active>
        <description>LastName_Special_char_check</description>
        <errorConditionFormula>NOT(REGEX(   loan__Last_Name__c   , &quot;^[a-zA-Z0-9-\\s]*$&quot;))</errorConditionFormula>
        <errorDisplayField>loan__Last_Name__c</errorDisplayField>
        <errorMessage>Last Name should not include special characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__MiddleName_Special_char_check</fullName>
        <active>true</active>
        <description>MiddleName_Special_char_check</description>
        <errorConditionFormula>NOT(REGEX(    loan__Middle_Name__c   , &quot;^[a-zA-Z]*$&quot;))</errorConditionFormula>
        <errorDisplayField>loan__Middle_Name__c</errorDisplayField>
        <errorMessage>Middle Name should not include special characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__No_of_children_check</fullName>
        <active>true</active>
        <description>No of children check</description>
        <errorConditionFormula>OR(
          loan__Number_of_children__c &gt; 20,loan__Number_of_children__c &lt; 0
)</errorConditionFormula>
        <errorDisplayField>loan__Number_of_children__c</errorDisplayField>
        <errorMessage>Number of children should be an integer less than 20</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Spouse_FirstName_Special_char_check</fullName>
        <active>true</active>
        <description>Spouse_FirstName_Special_char_check</description>
        <errorConditionFormula>NOT(REGEX(     loan__Spouse_Father_s_First_Name__c    , &quot;^[a-zA-Z]*$&quot;))</errorConditionFormula>
        <errorDisplayField>loan__Spouse_Father_s_First_Name__c</errorDisplayField>
        <errorMessage>First Name should not include special characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Spouse_LastName_Special_char_check</fullName>
        <active>true</active>
        <description>Spouse_LastName_Special_char_check</description>
        <errorConditionFormula>NOT(REGEX(      loan__Spouse_Father_s_Last_Name__c    , &quot;^[a-zA-Z]*$&quot;))</errorConditionFormula>
        <errorDisplayField>loan__Spouse_Father_s_Last_Name__c</errorDisplayField>
        <errorMessage>Last Name should not include special characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Spouse_MiddleName_Special_char_check</fullName>
        <active>true</active>
        <description>Spouse_MiddleName_Special_char_check</description>
        <errorConditionFormula>NOT(REGEX( loan__Spouse_Father_s_Middle_Name__c   , &quot;^[a-zA-Z]*$&quot;))</errorConditionFormula>
        <errorDisplayField>loan__Spouse_Father_s_Middle_Name__c</errorDisplayField>
        <errorMessage>Middle Name should not include special characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Telephone_Special_char_check</fullName>
        <active>false</active>
        <description>Telephone_Special_char_check</description>
        <errorConditionFormula>NOT(REGEX(  loan__Telephone_No__c    , &quot;^[0-9]{10}$&quot;))</errorConditionFormula>
        <errorDisplayField>loan__Telephone_No__c</errorDisplayField>
        <errorMessage>Invalid Telephone No.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Zipcode_check</fullName>
        <active>false</active>
        <description>Zipcode_check</description>
        <errorConditionFormula>NOT(REGEX( loan__Zipcode__c , &quot;\\d{6}&quot;))</errorConditionFormula>
        <errorMessage>Invalid Zipcode</errorMessage>
    </validationRules>
</CustomObject>